Probably last changes contentwise

--- a/fazit.tex
+++ b/fazit.tex
@@ -1,2 +1,17 @@
 \chapter{Fazit und Zusammenfassung}
 \label{ch:fazit-zusammenfassung}
+
+Es wurde untersucht, welcher Zusammenhang zwischen der Formulierung von Fragebogenitems zur Erfassung der Bias Awareness und den dabei gemessenen Werten besteht.
+Zusätzlich wurde untersucht, ob es diesbezüglich Differenzen zwischen Lehramtsstudierenden und Lehrkräften gibt.
+
+Es konnte gezeigt werden, dass die mit einer allgemeinen Skala erfasste Bias Awareness signifikant höher lag gegenüber einer Erfassung mithilfe einer auf den schulischen Kontext angepassten Skala.
+Dieser Effekt zeigte sich sowohl in der gesamten Stichprobe auch bei getrennter Betrachtung der Lehramtsstudierenden und Lehrkräfte.
+
+Ein signifikanter Unterschied zwischen allgemeiner, schulbezogener Erfassung und in Bezug auf selbst unterrichtete Schülerinnen und Schüler formulierter Skala konnte lediglich bei den Lehramtsstudierenden festgestellt werden.
+
+Bei Analyse der Unterschiede zwischen allgemeiner stereotypenspezifischer Erfassung und ihrer schulbezogenen Variante zeigte sich ein gemischtes Bild, bei dem unter den Lehrkräften in Bezug auf Migrationshintergrund, sozioökonomischen Status und Frauen ein schwacher bis mittlerer Effekt festgestellt werden konnte.
+Es ist weitere Forschung nötig, um diesen Effekt zu bestätigen und möglicherweise zu generalisieren.
+
+Die Existenz statistisch signifikanter Differenzen zwischen den Lehramtsstudierenden und Lehrkräften mit Praxiserfahrung konnten nicht festgestellt werden.
+
+Zusammenfassend bleibt festzuhalten, dass weitere wissenschaftliche Erkenntnisse im Bereich der schulbezogenen Bias Awareness nötig sind, um die bestehenden Forschungslücken zu schließen und eine solide wissenschaftliche Basis zu liefern.
