Final version: layout and typo fixes

--- a/appendix.tex
+++ b/appendix.tex
@@ -39,11 +39,11 @@ Bei den Skalen mit schulischem Kontext handelt es sich um angepasste Varianten d
 \begin{enumerate}
 	\item Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Menschen mit einem niedrigen sozio-ökonomischen Status habe.
 	
-	\item Wenn ich mit Menschen mit einem niedrigen sozio-ökonomischen Status spreche, mache ich mir manchmal Sorgen, dass ich mich ungewollt voreingenommen verhalte.
+	\item Wenn ich mit Menschen mit einem niedrigen sozio-ökonomi-\break schen Status spreche, mache ich mir manchmal Sorgen, dass ich mich ungewollt voreingenommen verhalte.
 	
-	\item Auch wenn ich Menschen mit einem niedrigen sozio-ökonomischen Status mag, mache ich mir Sorgen, dass ich unbewusste Vorurteile gegenüber Menschen mit einem niedrigen sozio-ökonomischen Status habe.
+	\item Auch wenn ich Menschen mit einem niedrigen sozio-ökonomi-\break schen Status mag, mache ich mir Sorgen, dass ich unbewusste Vorurteile gegenüber Menschen mit einem niedrigen sozio-\break ökonomischen Status habe.
 	
-	\item Ich mache mir nie Sorgen, dass ich mich Menschen mit einem niedrigen sozio-ökonomischen Status gegenüber auf subtile Weise voreingenommen verhalten könnte.
+	\item Ich mache mir nie Sorgen, dass ich mich Menschen mit einem niedrigen sozio-ökonomischen Status gegenüber auf subtile\break Weise voreingenommen verhalten könnte.
 \end{enumerate}
 
 
@@ -107,11 +107,11 @@ Bei den Skalen mit schulischem Kontext handelt es sich um angepasste Varianten d
 \label{app:skala-sozoek-sus}
 
 \begin{enumerate}
-	\item Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Schüler*innen mit einem niedrigen sozio-ökonomischen Status habe.
+	\item Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber Schüler*innen mit einem niedrigen sozio-ökonomi-\break schen Status habe.
 	
-	\item Wenn ich mit Schüler*innen mit einem niedrigen sozio-ökonomischen Status spreche, mache ich mir manchmal Sorgen, dass ich mich ungewollt voreingenommen verhalte.
+	\item Wenn ich mit Schüler*innen mit einem niedrigen sozio-ökonomi-\break schen Status spreche, mache ich mir manchmal Sorgen, dass ich mich ungewollt voreingenommen verhalte.
 	
-	\item Auch wenn ich Schüler*innen mit einem niedrigen sozio-ökonomischen Status mag, mache ich mir Sorgen, dass ich unbewusste Vorurteile gegenüber Schüler*innen mit einem niedrigen sozio-ökonomischen Status habe.
+	\item Auch wenn ich Schüler*innen mit einem niedrigen sozio-ökono-\-mischen Status mag, mache ich mir Sorgen, dass ich unbewusste Vorurteile gegenüber Schüler*innen mit einem niedrigen sozio-ökonomischen Status habe.
 	
 	\item Ich mache mir nie Sorgen, dass ich mich Schüler*innen mit einem niedrigen sozio-ökonomischen Status gegenüber auf subtile Weise voreingenommen verhalten könnte.
 \end{enumerate}
@@ -137,7 +137,7 @@ Bei den Skalen mit schulischem Kontext handelt es sich um angepasste Varianten d
 \begin{enumerate}
 	\item Obwohl ich weiß, dass es nicht angebracht ist, habe ich manchmal das Gefühl, dass ich unbewusst eine negative Einstellung gegenüber männlichen Schülern habe.
 	
-	\item Wenn ich mit männlichen Schülern spreche, mache ich mir manchmal Sorgen, dass ich mich ungewollt voreingenommen verhalte.
+	\item Wenn ich mit männlichen Schülern spreche, mache ich mir\break manchmal Sorgen, dass ich mich ungewollt voreingenommen verhalte.
 	
 	\item Auch wenn ich männliche Schüler mag, mache ich mir Sorgen, dass ich unbewusste Vorurteile gegenüber männlichen Schülern im Allgemeinen habe.
 	
