--- a/auswertung.tex
+++ b/auswertung.tex
@@ -226,7 +226,7 @@ Eine Übersicht über die gemessenen Werte sind in \autoref{fig:boxplot-stereoty
 Verglichen wurden jeweils die allgemeinen Skalen zu Migrationshintergrund (BA02), sozioökonomischem Status (BA03) sowie in Bezug auf Frauen (BA04) und Männer (BA05) mit den schulspezifisch formulierten Skalen zu Migrationshintergrund (BA08), sozioökonomischem Status (BA09), Frauen (BA10) und Männern (BA11).
 Um zu überprüfen, ob es sich bei den Abweichungen um statistisch signifikante Differenzen handelt, wurden erneut zweiseitige abhängige t-Tests verwendet.
 Die Effektstärke wurde mithilfe von Cohen's d angegeben.
-Da keine der geschlechtsbezogenen Skalen den Shapiro-Wilk-Test bestanden hatte, wurde in diesen Fällen zusätzlich ein Wilcoxon-Vorzeichen-Rang-Test durchgeführt und die Wilcoxon-Effektstärke r berechnet.
+Da keine der geschlechtsbezogenen Skalen den Shapiro-Wilk-Test bestanden hatte, wurde in diesen Fällen zusätzlich ein Wilcoxon-Test durchgeführt und die Wilcoxon-Effektstärke r berechnet.
 Die Ergebnisse sind in \autoref{tab:t-tests-stereotypen-gesamt} dargestellt.
 
 \begin{table}[h!]
@@ -298,7 +298,7 @@ Auch hier handelt es sich um einen mittleren Effekt.
 \end{figure}
 
 Ebenso wurden die Mittelwerte der stereotypenspezifisch formulierten Skala zur Messung der Bias Awareness mit der schul- und stereotypenspezifisch formulierten Skala verglichen.
-Die Ergebnisse sind in \autoref{fig:boxplot-stereotypen-studierende} dargestellt.
+Die Ergebnisse\break sind in \autoref{fig:boxplot-stereotypen-studierende} dargestellt.
 
 Auch hier wurden jeweils die allgemeinen Skalen zu Migrationshintergrund (BA02), sozioökonomischem Status (BA03), in Bezug auf Frauen (BA04) und in Bezug auf Männer (BA05) mit den jeweiligen schulspezifisch formulierten Skalen zu Migrationshintergrund (BA08), sozioökonomischem Status (BA09), Frauen (BA10) und Männern (BA11) verglichen.
 Für die Überprüfung der statistischen Signifikanz wurden zweiseitige abhängige t-Tests verwendet.
