--- a/datenerhebung.tex
+++ b/datenerhebung.tex
@@ -29,7 +29,7 @@ Basierend auf diesen Überlegungen lassen sich folgende Leitfragen formulieren:
 
 \begin{itemize}
 	\item Unterscheidet sich die gemessene Bias Awareness bei allgemein formulierten Fragebogenitems gegenüber der gemessenen Bias Awareness bei Verwendung von schulspezifischen Formulierungen?
-	\item Bestehen Unterschiede, wenn die Fragebogenitems so formuliert sind, dass Lehrkräfte Aussagen zu selbst unterrichteten Schülerinnen und Schülern treffen müssen?
+	\item Bestehen Unterschiede, wenn die Fragebogenitems so formuliert sind, dass Lehrkräfte Aussagen zu selbst unterrichteten\break Schülerinnen und Schülern treffen müssen?
 	\item Spielt es bei der Erfassung der Bias Awareness eine Rolle, ob die Items schul- und stereotypenspezifisch (z.B. in Bezug auf Migrationshintergrund) formuliert sind im Vergleich zu allgemeiner, stereotypenspezifischer Formulierung?
 	\item Gibt es Differenzen zwischen Lehrkräften und Lehramtsstudierenden?
 \end{itemize}
@@ -63,7 +63,7 @@ Diese fand im Rahmen eines Online-Fragebogens statt, dessen Bearbeitungsdauer si
 Hierfür wurde die Online-Plattform SoSci Survey \citep{leiner2024sosci} verwendet, was es ermöglichte, den Fragebogen einfach zur Verfügung zu stellen.
 Die Zielgruppe des Fragebogens waren sowohl Lehramtsstudierende und Referendare als auch fertig ausgebildete Lehrkräfte mit Praxiserfahrung.
 
-Der Fragebogen setzte sich dabei aus mehreren Seiten zusammen, in denen zunächst soziodemographische Informationen wie Geschlecht, Alter sowie Geburtsland abgefragt wurden.
+Der Fragebogen setzte sich dabei aus mehreren Seiten zusammen, in denen zunächst soziodemographische Informationen wie\break Geschlecht, Alter sowie Geburtsland abgefragt wurden.
 Darauf folgend wurden berufliche Angaben wie die Formale Bildung, aktuelle Beschäftigung und Schulart erhoben.
 Anschließend wurde die Bias Awareness zuerst allgemein, dann mit Bezug auf den schulischen Kontext erfasst.
 Auf einer dritten Seite wurden die Fragen zusätzlich geschlechtsspezifisch formuliert.
