--- a/diskussion.tex
+++ b/diskussion.tex
@@ -108,12 +108,12 @@ Es stellt sich die Frage, ob sich die hier präsentierten Ergebnisse bei Studien
 \section{Limitationen}
 \label{sec:limitationen}
 
-Wie bereits in \autoref{sec:datenaufbereitung} genauer beschrieben wurden im Rahmen der Datenaufbereitung Maßnahmen ergriffen, um die Qualität der vorliegenden Daten zu steigern.
+Wie bereits in \autoref{sec:datenaufbereitung} genauer beschrieben, wurden im Rahmen der Datenaufbereitung Maßnahmen ergriffen, um die Qualität der vorliegenden Daten zu steigern.
 Ein Nebeneffekt der Auswahl von verpflichtenden Fragen beim Fragebogen war es, dass in weniger Interviews Fragen am Ende des Bogens beantwortet waren als noch am Anfang.
 Weiterhin war es möglich, dass Teilnehmer gegen Ende kein Interesse mehr an einer seriösen Teilnahme hatten und somit keine ehrlichen Antworten mehr gaben.
 Durch die so festgestellten Effekte kann es zu Verzerrungen in den Daten gekommen sein, welche nicht durch deren Aufbereitung und Bereinigung ausgeglichen werden konnten.
 
-Die Werte für die erlangten Abschlüsse der Studienteilnehmer sind dahingehend überraschend, dass sämtliche Befragten entweder Lehramtsstudierende oder bereits als Lehrkräfte tätig waren und eine Abiturquote von 25\% somit sehr gering ist.
+Die Werte für die erlangten Abschlüsse der Studienteilnehmer sind dahingehend überraschend, dass sämtliche Befragten entweder\break Lehramtsstudierende waren oder bereits als Lehrkräfte arbeiteten und eine Abiturquote von 25\% somit sehr gering ist.
 Eine mögliche Erklärung ist, dass Teilnehmer die Frage falsch verstanden haben können.
 Gefragt war nach allen erlangten Bildungsabschlüssen, dies könnte aus verschiedenen Gründen jedoch als Frage nach dem höchsten erlangten Bildungsabschluss missverstanden worden sein.
 
