--- a/einleitung.tex
+++ b/einleitung.tex
@@ -2,13 +2,13 @@
 \label{ch:einleitung}
 
 Die Tätigkeit als Lehrkraft ist ein sehr komplexes Handlungsfeld.
-Nicht nur innerhalb des Unterrichtsgeschehens, sondern auch außerhalb davon -- beispielsweise bei der Leistungsbeurteilung von Schülerinnen und Schülern -- werden hohe kognitive Anforderungen an Lehrkräfte gestellt, denen sie in häufig geringer Zeit gerecht werden müssen.
+Nicht nur innerhalb des Unterrichtsgeschehens, sondern auch außerhalb davon -- beispielsweise bei der Leistungsbeurteilung von Schülerinnen und Schülern -- werden hohe kognitive Anforderungen an Lehrkräfte gestellt, denen sie häufig in geringer Zeit gerecht werden müssen.
 
 Nach der \emph{cognitive load theory} \citep{atkinson1968human} handelt es sich beim menschlichen Arbeitgedächtnis um einen limitierten Speicher, der nur wenige Informationen gleichzeitig verarbeiten kann.
 Um trotz dieser Begrenzung nicht im Informationsüberfluss zu ertrinken, werden schnelle heuristische Methoden verwendet.
 Infolgedessen unterliegen Menschen vielen kognitiven Verzerrungen, welche ihre Wahrnehmung oder Urteilsfähigkeit beeinflussen können.
 
-Eine häufig auftretende kognitive Verzerrung ist die Bildung von impliziten Stereotypen, also eine Reduzierung von Individuen auf bestimmte Merkmale oder Überzeugungen \citep{greenwald1995implicit}.
+Eine häufig auftretende kognitive Verzerrung ist die Bildung von impliziten Stereotypen, also eine Reduzierung von Individuen auf bestimmte Merkmale oder Überzeugungen, welche auf deren Gruppe zutreffen. \citep{greenwald1995implicit}.
 Es hat sich gezeigt, dass implizite Stereotypen häufig die Ursache offener Diskriminierung sind \citep{agerstrom2011role, picho2013exploring}.
 Auch für den schulischen Kontext konnte gezeigt werden, dass durch Lehrkräfte stereotypisierte Schülerinnen und Schüler unter negativen Folgen leiden \citep{martiny2020theoretischer}.
 Das Ausmaß und die negativen Auswirkungen impliziter Stereotypen lassen sich jedoch reduzieren, wenn sich die entsprechenden Personen über deren Existenz bewusst werden \citep{monteith1993self, perry2015modern}.
@@ -18,4 +18,4 @@ Bei der Erfassung der Bias Awareness kommen häufig Fragebögen zum Einsatz, z.B
 In verschiedenen Studien gab es Hinweise darauf, dass die Formulierung der Fragen einen großen Einfluss auf den gemessenen Wert haben kann \citep{kaminski2017situational, bing2004incremental, guyatt1999effect}.
 
 Es stellt sich daher die Frage, welchen Einfluss die schulbezogene Formulierung der Items zur Erfassung der Bias Awareness auf den gemessenen Wert hat.
-In dieser Arbeit soll dieser Frage nachgegangen und analysiert werden, ob es diesbezüglich zusätzliche Differenzen zwischen Lehramtsstudierenden und Lehrkräften mit Praxiserfahrung gibt.
+In der vorliegenden Arbeit soll dieser Frage nachgegangen und analysiert werden, ob es diesbezüglich zusätzliche Differenzen zwischen Lehramtsstudierenden und Lehrkräften mit Praxiserfahrung gibt.
