--- a/forschung.tex
+++ b/forschung.tex
@@ -38,7 +38,7 @@ Nach \cite{benson2016cognitive} kristallisieren sich dabei vier Problemstellunge
 Jede der folgenden Kategorien repräsentiert dabei einen der dargestellten Übergänge zwischen den Phasen.
 
 \begin{enumerate}
-	\item \emph{Informationsüberflutung}: Bereits seit Beginn der Existenz menschlicher Aufzeichnungen von Informationen existiert das Problem der Überflutung durch ebenjene \citep{bawden2020information}.
+	\item \emph{Informationsüberflutung}: Bereits seit Beginn der Existenz\break menschlicher Aufzeichnungen von Informationen existiert das Problem der Überflutung durch ebenjene \citep{bawden2020information}.
 	Aufgrund technischer Entwicklungen und der Verbreitung des Internets hat sich die Menge an Informationen, die auf uns einwirken, insbesondere in den letzten Jahrzehnten extrem vergrößert \citep{siegler2010every}.
 	So gaben 22.5\% der Deutschen im Jahr 2021 Informationsüberflutung als eine der Hauptursachen für Stress an \citep{meyer2021entspann}.
 	Dies beeinflusst auch die Qualität professioneller Entscheidungen, beispielsweise im Gesundheitssystem \citep{hall2004information}, beim Management von Personal \citep{volnhals2008information} und Marketing \citep{meyer1998information} oder in der Wissenschaft \citep{landhuis2016scientific}.
@@ -60,7 +60,7 @@ Jede der folgenden Kategorien repräsentiert dabei einen der dargestellten Über
 	%TODO: Eventuell diesen Teil hinter die Aufzählung verschieben? Unterscheidung explicit/implicit stereotype
 	Besonders relevant für diese Arbeit ist auch die Bildung von \emph{Stereotypen}.
 	Dabei handelt es sich um ``weitverbreitete, jedoch feste und stark vereinfachte Bilder oder Vorstellungen zu einem bestimmten Typ von Personen oder Dingen'' \citep[Übers. d. Verf.]{bordalo2016stereotypes}.
-	Insbesondere in Bezug auf die Zugehörigkeit zu ethnischen Gruppen \citep{brigham1971ethnic, guichard1977ethnic, mastro2009effects} und Geschlecht \citep{hoffman1990gender, heilman2012gender, haines2016times, ellemers2018gender} gab und gibt es immer noch viel aktuelle Forschung, die sich mit den (insbesondere negativen) Auswirkungen von Stereotypen befasst.
+	Insbesondere in Bezug auf die Zugehörigkeit zu ethnischen Gruppen \citep{brigham1971ethnic, guichard1977ethnic, mastro2009effects} und Geschlecht \citep{hoffman1990gender, heilman2012gender, haines2016times, ellemers2018gender} gab und gibt es immer noch viel aktuelle Forschung, die sich mit den\break (insbesondere negativen) Auswirkungen von Stereotypen befasst.
 	
 	\item \emph{Notwendigkeit, schnell zu handeln}: Trotz der Fülle an Informationen, die auf uns einströmen, dürfen wir uns nicht durch das Abwägen von Optionen aufhalten lassen, sondern müssen zuverlässig schnelle und gute Entscheidungen treffen.
 	Aus diesem Grund liegt unser Fokus häufig auf den offensichtlichen und einfachen Dingen, anstatt sich in den komplizierten Details der Situation zu verlieren.
@@ -210,15 +210,14 @@ Weiterhin können kulturelle Unterschiede in der Formulierung der Fragebogenitem
 Es kann daher notwendig sein, Fragebögen an die Kultur der Zielgruppe entsprechend anzupassen \citep{poortinga2013umgang}.
 
 %TODO: noch mehr zu kontextspezifischer Formulierung? Quellenlage ist schlecht.
-Doch nicht nur die sprachliche Klarheit und die kulturelle Komponente der Fragebogenitemformulierung haben einen Einfluss auf das Ergebnis der Befragung.
+Doch nicht nur die sprachliche Klarheit und die kulturelle Komponente der Formulierung haben einen Einfluss auf das Ergebnis der Befragung.
 Es spielt auch eine Rolle, ob die Fragen innerhalb der einzelnen Items allgemein oder kontextspezifisch formuliert sind.
 Beispielsweise konnten \textciteauthor{bing2004incremental} zeigen, dass eine kontextgebundene Itemformulierung Messfehler reduzieren und die Validität der Messung erhöhen kann \citep{bing2004incremental}.
-
 %TODO: Mehr Quellen für Framing
 Ein ähnlicher Effekt entsteht bei speziellem Framing der Fragen.
 Dabei wird durch die Formulierung bereits eine Assoziation bei den Versuchspersonen hervorgerufen, welche das Ergebnis beeinflussen kann \citep{guyatt1999effect}.
 
 Auch das Format der Items kann eine Rolle spielen:
 So reduziert eine nuancenreiche Auswahl an Antwortmöglichkeiten das Risiko für biasbehaftete Antworten \citep{elson2017question}.
-Eine zu große Anzahl an Möglichkeiten ist jedoch auch nicht erwünscht, da es so zur Überforderung der Befragten kommen kann \citep{knutsen2010question}.
-Wird eine Likert-Skala mit ungerader Anzahl an Auswahloptionen gewählt, kann es zusätzlich zu einem Mittelpunkt-Bias kommen, bei dem die mittlere Kategorie überdurchschnittlich häufig gewählt wird \citep{kulas2009middle}.
+Eine zu große Anzahl an Möglichkeiten ist jedoch auch unerwünscht, da es so zur Überforderung der Befragten kommen kann \citep{knutsen2010question}.
+Wird eine Likert-Skala mit ungerader Anzahl an Optionen gewählt, kann es zusätzlich zu einem Mittelpunkt-Bias kommen, wobei die mittlere Kategorie überdurchschnittlich häufig gewählt wird \citep{kulas2009middle}.
